# shellver

./: Cargo.toml  README.md  justfile
.github/workflows/: cd.yml  ci.yml
examples/: basic.rs
src/: lib.rs  lib_tests.rs  main.rs
tests/: cli.rs
