[package]
name = "shellver"
version = "1.0.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/SzilvasiPeter/shellver"
description = "Detect the current shell and its version on Linux by traversing /proc."
readme = "README.md"
keywords = ["shell", "linux", "procfs", "version", "detection"]
categories = ["os::linux-apis", "command-line-interface"]

[dependencies]
regex = { version = "1.12.3", default-features = false, features = ["std"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
